2-dom manipulation & 2-isolate-and-integrate

--- a/2-dom-manipulation/exercises/1-change-text.html
+++ b/2-dom-manipulation/exercises/1-change-text.html
@@ -36,6 +36,9 @@
                     debugger;
 
                     // write me! (... without using cloneNode, that's kind of cheating)
+                    const actual = document.getElementById('actual');
+                    const hEl = actual.children[0];
+                    hEl.innerText = 'hi!';
                 </script>
             </div>
 
