--- a/2-dom-manipulation/exercises/2-change-link.html
+++ b/2-dom-manipulation/exercises/2-change-link.html
@@ -44,6 +44,10 @@
                     debugger;
 
                     // write me! (... without using cloneNode, that's kind of cheating)
+                    const actual = document.getElementById('actual');
+                    const aEl = actual.children[0];
+                    aEl.innerText = 'learn about badgers';
+                    aEl.href = 'https://www.badgerbadgerbadger.com';
                 </script>
             </div>
 
