--- a/2-dom-manipulation/exercises/4-add-a-link.html
+++ b/2-dom-manipulation/exercises/4-add-a-link.html
@@ -39,7 +39,13 @@
                 <script id="dom-manipulation-script">
                     'use strict';
                     debugger;
+                    const actual = document.getElementById('actual');
 
+                    const aEl = document.createElement('a');
+                    aEl.innerText = 'Mr. Traversy does it again!';
+                    aEl.href = 'https://www.youtube.com/watch?v=0ik6X4DJKCc';
+
+                    actual.appendChild(aEl);
                     // write me! (... without using cloneNode, that's kind of cheating)
                 </script>
             </div>
